# brane

./: CMakeLists.txt  main.cpp
brane/algs/neuron/activation/: sigmoid.h  square.h  tanh.h
brane/algs/neuron/connection/: general.h
brane/structures/: neuron.cpp  neuron.h  perceptron.h
brane/structures/factories/: neuron_factory.cpp  neuron_factory.h
